waybar/.config/waybar/style-floating.css
@import url("../../.local/state/theme/waybar.css");

* {
    font-family: "FiraCode Nerd Font", "Fira Code", "monospace";
    font-size: 13px;
    min-height: 10px;
	border: none;
	border-radius: 10;
}

window#waybar {
	background: transparent;
}

window#waybar.hidden {
	opacity: 0.2;
}

/* ── Window title ──────────────────────────────────── */
#window {
	margin-top: 6px;
	padding-left: 10px;
	padding-right: 10px;
	border-radius: 10px;
	transition: none;
    color: transparent;
	background: transparent;
}

/* ── Left modules ──────────────────────────────────── */
#custom-launcher {
	font-size: 24px;
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 5px;
	border-radius: 10px;
	transition: none;
	color: @on_primary_container;
	background: @primary_container;
}

#cpu {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	margin-bottom: 0px;
	padding-right: 10px;
	border-radius: 10px;
	transition: none;
	color: @on_primary;
	background: @primary;
}

#memory {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	margin-bottom: 0px;
	padding-right: 10px;
	border-radius: 10px;
	transition: none;
	color: @on_tertiary;
	background: @tertiary;
}

#custom-media {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_secondary;
	background: @secondary;
}

#tray {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	margin-bottom: 0px;
	padding-right: 10px;
	border-radius: 10px;
	transition: none;
	color: @on_secondary_container;
	background: @secondary_container;
}

/* ── Center Modules ────────────────────────────────── */
#workspaces {
	margin-top: 6px;
	margin-left: 12px;
	font-size: 4px;
	margin-bottom: 0px;
	border-radius: 10px;
	background: @background;
	transition: none;
}

/* For all workspace buttons */
#workspaces button {
	transition: none;
	color: @primary;
	background: transparent;
	font-size: 16px;
	border-radius: 2px;
}

/* Currently active workspace */
#workspaces button.active {
	color: @tertiary;
    border-top: 2px solid @tertiary;
    border-bottom: 2px solid @tertiary;
}

/* Workspaces with open windows */
#workspaces button.occupied {
	transition: none;
	color: @surface;
	background: transparent;
	font-size: 4px;
}

/* Hovered workspace */
#workspaces button:hover {
	transition: none;
	box-shadow: inherit;
	text-shadow: inherit;
	border-color: @secondary;
    color: @secondary;
}

#workspaces button.active:hover {
	color: @secondary;
}

/* ── Right Modules ─────────────────────────────────── */

#custom-updates {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_primary;
	background: @primary;
}

#custom-wallpaper {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_secondary;
	background: @secondary;
}

#pulseaudio {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_tertiary;
	background: @tertiary;
}

#clock {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_background;
	background: @background;
}

#backlight {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: #161320;
	background: #F8BD96;
}

#battery {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: #161320;
	background: #B5E8E0;
}

#battery.charging, #battery.plugged {
	color: #161320;
    background-color: #B5E8E0;
}

#battery.critical:not(.charging) {
    background-color: #B5E8E0;
    color: #161320;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

@keyframes blink {
    to {
        background-color: #BF616A;
        color: #B5E8E0;
    }
}

#custom-power {
	font-size: 20px;
	margin-top: 6px;
	margin-left: 8px;
	margin-right: 8px;
	padding-left: 10px;
	padding-right: 5px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_error;
	background: @error;
}

#network {
	margin-top: 6px;
	margin-left: 8px;
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: 0px;
	border-radius: 10px;
	transition: none;
	color: @on_secondary_container;
	background: @secondary_container;
}

